# guzzy

./: .gitignore  pyproject.toml
guzzy/: __init__.py  __main__.py
guzzy/commands/: diff.sh  file-history.sh  files.sh  log.sh  tags.sh
