[tool.poetry]
name = "guzzy"
version = "0.0.0"
description = "Interactive CLI git client inside fzf."
authors = ["samedamci <samedamci@disroot.org>"]
license = "ISC"
homepage = "https://github.com/samedamci/guzzy"
repository = "https://github.com/samedamci/guzzy"
keywords = ["git", "fzf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Unix Shell",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9.2"
pysheller = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[tool.poetry.scripts]
guzzy = "guzzy:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[build-system]
requires = ["poetry-core>=1.0.0, poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
